--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <div class="lead__image"></div>
-                <p class="lead__caption">ваша полка — верхняя</p>
+                <figure>
+                    <img src="./images/lead-polka.jpg" class="lead__image">
+                    <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+                </figure>
             </section>
 
             <section class="intro">
@@ -55,10 +57,10 @@
                 <img src="./images/photo-grid-ergaki.jpg" alt="Туман 3" class="photo-grid__item">
             </section>
 
-            <section class="places">
+            <article class="places">
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
-                    <a href="http://park-kosa.ru" class="place__website">
+                    <a target="_blank" href="http://park-kosa.ru" class="place__website">
                         <p class="place__url-heading">URL</p>
                         <p class="place__link">park-kosa.ru</p>
                     </a>
@@ -71,7 +73,7 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
-                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website">
+                    <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website">
                         <p class="place__url-heading">URL</p>
                         <p class="place__link">National Geographic</p>
                     </a>
@@ -84,7 +86,7 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Алтай</h2>
-                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website">
+                    <a target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website">
                         <p class="place__url-heading">URL</p>
                         <p class="place__link">Facebook</p>
                     </a>
@@ -98,7 +100,7 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
-                    <a href="https://vk.com/baikalmile" class="place__website">
+                    <a target="_blank" href="https://vk.com/baikalmile" class="place__website">
                         <p class="place__url-heading">URL</p>
                         <p class="place__link">https://vk.com/baikalmile</p>
                     </a>
@@ -111,7 +113,7 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
-                    <a href="http://vodlozero.ru" class="place__website">
+                    <a target="_blank" href="http://vodlozero.ru" class="place__website">
                         <p class="place__url-heading">URL</p>
                         <p class="place__link">http://vodlozero.ru</p>
                     </a>
@@ -122,12 +124,12 @@
                             деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
                     </div>
                 </div>
-            </section>
+            </article>
 
             <section class="cover">
                 <div class="cover__background">
                     <div class="cover__overlay"></div>
-                    <h3 class="cover__title">До Байкала «на собаках»</h3>
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
                 </div>
             </section>
@@ -143,7 +145,7 @@
                     <li> <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
                 </ul>
             </nav>
-            <div class="footer__copyright">&COPY;2020. Анастасия Пронина</div>
+            <p class="footer__copyright">&COPY;2020. Анастасия Пронина</p>
         </footer>
     </div>
 </body>
