--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
     <div class="page">
         <header class="header">
             <img src="./images/header-logo.svg" alt="Карта России" class="header__logo">
-            <div class="header__links">
-                <a href="#" class="header__lang-link">Ru</a>
-                <a href="#" class="header__lang-link header__lang-link-eng">En</a>
-            </div>
+            <ul class="header__links">
+                <li><a href="#" class="header__lang-link">Ru</a></li>
+                <li><a href="#" class="header__lang-link">En</a></li>
+            </ul>
         </header>
 
         <main class="content">
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-                <figure>
-                    <img src="./images/lead-polka.jpg" class="lead__image">
+                <figure class="lead__image-zone">
+                    <img src="./images/lead-polka.jpg" alt="ваша полка-верхняя" class="lead__image">
                     <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
                 </figure>
             </section>
@@ -129,7 +129,9 @@
             <section class="cover">
                 <div class="cover__background">
                     <div class="cover__overlay"></div>
-                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+                        <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    </a>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
                 </div>
             </section>
@@ -138,11 +140,11 @@
         <footer class="footer">
             <nav>
                 <ul class="footer__links">
-                    <li><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
-                    <li> <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
-                    <li> <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
-                    <li> <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
-                    <li> <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+                    <li> <a target="_blank" href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+                    <li> <a target="_blank" href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+                    <li> <a target="_blank" href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+                    <li> <a target="_blank" href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+                    <li> <a target="_blank" href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
                 </ul>
             </nav>
             <p class="footer__copyright">&COPY;2020. Анастасия Пронина</p>
@@ -151,3 +153,5 @@
 </body>
 
 </html>
+
+<!--Спасибо большое за комментарии и ссылки на дополнительную информацию))-->
