--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header class="header">
             <img src="./images/header-logo.svg" alt="Карта России" class="header__logo">
             <ul class="header__links">
-                <li><a href="#" class="header__lang-link">Ru</a></li>
+                <li><a href="#" class="header__lang-link header__lang-link_status_active">Ru</a></li>
                 <li><a href="#" class="header__lang-link">En</a></li>
             </ul>
         </header>
@@ -60,10 +60,10 @@
             <article class="places">
                 <div class="place">
                     <h2 class="place__title">Куршская коса</h2>
-                    <a target="_blank" href="http://park-kosa.ru" class="place__website">
+                    <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <p class="place__link">park-kosa.ru</p>
-                    </a>
+                        <a target="_blank" href="http://park-kosa.ru" class="place__link">park-kosa.ru</a>
+                    </div>
                     <img src="./images/place-kosa.jpg" class="place__image" alt="Куршская коса">
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
@@ -73,10 +73,10 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Кольский</h2>
-                    <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__website">
+                    <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <p class="place__link">National Geographic</p>
-                    </a>
+                        <a target="_blank" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link">National Geographic</a>
+                    </div>
                     <img src="./images/place-kolsky.jpg" class="place__image" alt="Кольский полуостров">
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -86,10 +86,10 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Алтай</h2>
-                    <a target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__website">
+                    <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <p class="place__link">Facebook</p>
-                    </a>
+                        <a target="_blank" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link">Facebook</a>
+                    </div>
                     <img src="./images/place-altai.jpg" class="place__image" alt="Алтай">
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Алтай — одно из красивейших мест в России. В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым
@@ -100,10 +100,10 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Зимний Байкал</h2>
-                    <a target="_blank" href="https://vk.com/baikalmile" class="place__website">
+                    <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <p class="place__link">https://vk.com/baikalmile</p>
-                    </a>
+                        <a target="_blank" href="https://vk.com/baikalmile" class="place__link">https://vk.com/baikalmile</a>
+                    </div>
                     <img src="./images/place-winter-baikal.jpg" class="place__image" alt="Зимний Байкал">
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -113,10 +113,10 @@
                 </div>
                 <div class="place">
                     <h2 class="place__title">Карелия</h2>
-                    <a target="_blank" href="http://vodlozero.ru" class="place__website">
+                    <div class="place__website">
                         <p class="place__url-heading">URL</p>
-                        <p class="place__link">http://vodlozero.ru</p>
-                    </a>
+                        <a target="_blank" href="http://vodlozero.ru" class="place__link">http://vodlozero.ru</a>
+                    </div>
                     <img src="./images/place-karelia.jpg" class="place__image" alt="Карелия">
                     <div class="place__paragraphs">
                         <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не
@@ -127,13 +127,11 @@
             </article>
 
             <section class="cover">
-                <div class="cover__background">
+                <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__background">
                     <div class="cover__overlay"></div>
-                    <a target="_blank" href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
-                        <h2 class="cover__title">До Байкала «на собаках»</h2>
-                    </a>
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
-                </div>
+                </a>
             </section>
         </main>
 
