--- a/index.html
+++ b/index.html
@@ -152,4 +152,4 @@
 
 </html>
 
-<!--Спасибо большое за комментарии и ссылки на дополнительную информацию))-->
+<!--Eще раз спасибо большое за уделенное время)Стараюсь быть внимательнее к деталям теперь-->
