--- a/index.html
+++ b/index.html
@@ -152,4 +152,4 @@
 
 </html>
 
-<!--Eще раз спасибо большое за уделенное время)Стараюсь быть внимательнее к деталям теперь-->
+<!--Спасли меня доп. итерацией-->
